2002-10-26  Bart Veer  <bartv@ecoscentric.com>

	* src/usbs_upd985xx.c (ep0_rx_dsr):
	Fix typo in expression, reported by Andrew Lunn. The system's
	behaviour should not be affected.

2001-09-20  Bart Veer  <bartv@redhat.com>

	* src/usbs_upd985xx.c (ep0_init):
	During a reset, also reset the tx_in_progress and
	tx_pending locks. Otherwise if there are ongoing
	transmits while the host is issuing a reset no
	further transmits would be possible.

2001-09-14  Bart Veer  <bartv@redhat.com>

	* src/usbs_upd985xx.c:
	Various changes related to USB testing. Also include
	potential work-arounds for some unconfirmed hardware
	problems, but these are disabled for now.
	
	* src/usbs_upd985xx.c: 
	Change how the reset signal interrupt bit gets masked, to
	cope with the way Windows initializes a new USB device.

2001-08-09  Bart Veer  <bartv@redhat.com>

	* doc/usbs_upd985xx.sgml, doc/*.html:
	Updated to describe the driver's current behaviour.

	* src/usbs_upd985xx.c, cdl/usbs_upd985xx.cdl:
	Implement workaround for some hardware problems,
	by serializing transmit operations.

2001-08-08  Bart Veer  <bartv@redhat.com>

	* cdl/usbs_upd985xx.cdl, include/usbs_upd985xx.h,
	  src/usbs_upd985xx.c, src/usbs_upd985xx.cxx:
	Implement workarounds for some hardware problems.
	1) flush the ibus after every write operation.
	2) implement support for endpoint 5 transfers, and
	   optionally for emulating bulk transfers over this
	   endpoint (normally this endpoint is used for interrupt
	   transfers).
        All under the control of suitable configuration options,
	which by default are set to work around the hardware problems.

2001-08-06  Bart Veer  <bartv@redhat.com>

	* src/usbs_upd985xx.c:
	Add initial support for USB testing.

2001-07-02  Bart Veer  <bartv@redhat.com>

	* doc/usbs_upd985xx.sgml:
	Document alignment restrictions for receive buffers, and
	the optional platform-specific INIT macro.

	* doc/devs-usb-nec-upd985xx.html
	Regenerate following above change.
	